--- a/src/assets/styles.styl
+++ b/src/assets/styles.styl
@@ -1,6 +1,15 @@
-body
-	background-color cadetblue;
+@font-face
+	font-family 'Ubuntu-Bold'
+	src url("./fonts/Ubuntu-Bold.woff2") format('woff2')
+	font-weight bold
+	font-style normal
 
+body
+	background-image url('./img/banner.png')
+	background-size cover
+	background-repeat no-repeat
+	font-family Ubuntu-Bold
+	font-size 50px
 
 .greenClass
-	background-color: green;
+	background-color green;
